# AssistArDemo

./: LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/teamviewer/assistvision/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/teamviewer/assistar/demo/: App.kt  CameraPreviewYuv.kt  MainActivity.kt
app/src/main/java/com/teamviewer/assistar/demo/detect/: DetectViewModel.kt  DetectionsOverlay.kt
app/src/main/java/com/teamviewer/assistar/demo/di/: Modules.kt
app/src/main/java/com/teamviewer/assistar/demo/navigation/: NavigationAction.kt  Navigator.kt
app/src/main/java/com/teamviewer/assistar/demo/utils/: ResourceProvider.kt
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/teamviewer/assistvision/: ExampleUnitTest.kt
assistvision/: build.gradle.kts  consumer-rules.pro
assistvision/src/main/: AndroidManifest.xml
assistvision/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
assistvision/src/main/java/com/teamviewer/assistvision/boot/: TfLiteBoot.kt
assistvision/src/main/java/com/teamviewer/assistvision/constants/: AppConstants.kt
assistvision/src/main/java/com/teamviewer/assistvision/di/: Modules.kt
assistvision/src/main/java/com/teamviewer/assistvision/domain/model/: Detection.kt  DetectionsResult.kt
assistvision/src/main/java/com/teamviewer/assistvision/domain/service/: ObjectRecognitionService.kt
assistvision/src/main/java/com/teamviewer/assistvision/domain/usecase/: DetectObjectUseCase.kt  DetectObjectsUseCase.kt
assistvision/src/main/java/com/teamviewer/assistvision/gateway/constants/: Constants.kt
assistvision/src/main/java/com/teamviewer/assistvision/gateway/contract/: AssistArActivityContract.kt
assistvision/src/main/java/com/teamviewer/assistvision/gateway/ui/: AssistArActivity.kt  BaseAssistAr.kt
assistvision/src/main/java/com/teamviewer/assistvision/navigation/: NavigationAction.kt  Navigator.kt
assistvision/src/main/java/com/teamviewer/assistvision/services/boot/: PreHeatTfLite.kt  TfLiteBoot.kt
assistvision/src/main/java/com/teamviewer/assistvision/services/nativebridge/: JNIBridge.kt  NativeObjectRecognitionService.kt
assistvision/src/main/java/com/teamviewer/assistvision/services/ws/: OkHttpWebSocketDataSource.kt  SocketMessage.kt  WebSocketDataSource.kt
assistvision/src/main/java/com/teamviewer/assistvision/ui/detect/: DetectScreen.kt  DetectScreenUiState.kt  DetectViewModel.kt
assistvision/src/main/java/com/teamviewer/assistvision/ui/navigation/: NavigationAction.kt  Navigator.kt
assistvision/src/main/java/com/teamviewer/assistvision/ui/overlay/: BoxTransforms.kt  (+1 more)
assistvision/src/main/java/com/teamviewer/assistvision/usecase/: DetectObjectsUseCase.kt
assistvision/src/main/java/com/teamviewer/assistvision/utils/: ResourceProvider.kt
assistvision/src/main/res/drawable/: ar_ic_exit.xml
assistvision/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+39 files in other folders)
